Removed Debian packet support and added distribution target.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,14 +58,7 @@ ADD_DEFINITIONS(-DMINOR_VERSION=${ELT_VERSION_MINOR})
 ADD_DEFINITIONS(-DREVISION_VERSION=${ELT_VERSION_REVISION})
 
 SET(CMAKE_MODULE_PATH       "${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules" )	#
-SET(LIBELT_COMPONENT     "libelt${ELT_VERSION_MAJOR}.${ELT_VERSION_MINOR}.${ELT_VERSION_REVISION}" )
-SET(LIBELT-DEV_COMPONENT "libelt${ELT_VERSION_MAJOR}.${ELT_VERSION_MINOR}.${ELT_VERSION_REVISION}-dev" )
-SET(CPACK_COMPONENTS_ALL elt-bin ${LIBELT_COMPONENT} ${LIBELT-DEV_COMPONENT} elt-dev)
-
 #Add for samples as well.
-
-
-#install(FILES "${CMAKE_CURRENT_BINARY_DIR}/elt-config.cmake"             "${CMAKE_CURRENT_BINARY_DIR}/elt-config-version.cmake" DESTINATION "${ELT_LIB_INSTALL_DIR}/cmake/elt-${ELT_VERSION_MAJOR}.${ELT_VERSION_MINOR}" COMPONENT ${LIBELT-DEV_COMPONENT})
 
 #configure_file (
 #	${PROJECT_SOURCE_DIR}/elt.pc.in
@@ -314,135 +307,15 @@ IF ( UNIX )
 	INSTALL (FILES ${unixinclude} DESTINATION include/ELT/system/unix)
 ELSEIF (WIN32)
 	INSTALL (FILES ${windowsinclude} DESTINATION include/ELT/system/win)
-#ELSEIF (
 ENDIF()
 
 
 
-#debug file for windows.
-IF(MSVC)
-	OPTION(ELT_INSTALL_PDB "Install MSVC debug files." ON )
-ENDIF(MSVC)
-
-
-
-#debian package
-IF (CMAKE_CPACK_COMMAND AND UNIX AND ELT_OPT_BUILD_PACKAGE)
-
-	MESSAGE(STATUS "Generate CPack script.")
-	IF(UNIX)
-		SET(CPACK_GENERATOR "DEB")
-	ELSE()
-		SET(CPACK_GENERATOR "RPM")
-	ENDIF()
-
-
-	SET(CPACK_PACKAGE_NAME	"elt")
-	SET(CPACK_PACKAGE_CONTACT "valdemar lindberg" CACHE STRING "Package maintainer and PGP signer.")
-	SET(CPACK_PACKAGE_VENDOR "")
-	SET(CPACK_PACKAGE_DISPLAY_NAME "ELT ${ELT_VERSION}")
-	SET(CPACK_PACKAGE_DESCRIPTION "ELT (Engine Library Toolkit)")
-	SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY " ELT (Engine Library Toolkit) ${ELT_VERSION} is a multiplatform API.")
-	SET(CPACK_PACKAGE_VERSION "${ELT_VERSION}")
-	SET(CPACK_PACKAGE_VERSION_MAJOR "${ELT_VERSION_MAJOR}")
-	SET(CPACK_PACKAGE_VERSION_MINOR "${ELT_VERSION_MINOR}")
-	SET(CPACK_PACKAGE_VERSION_PATCH "${ELT_VERSION_REVISION}")
-	SET(CPACK_PACKAGE_INSTALL_DIRECTORY "elt${ELT_VERSION_MAJOR}.${ELT_VERSION_MINOR}")
-	SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
-	SET(CPACK_PACKAGE_ICON  "${CMAKE_CURRENT_SOURCE_DIR}/elticon.ico")
-	#SET(CPACK_RESOURCE_FILE_WELCOME )
-
-
-	STRING(TOUPPER ${LIBELT_COMPONENT}     "LIBELT_COMPONENT_UPPER")
-	STRING(TOUPPER ${LIBELT-DEV_COMPONENT} "LIBELT-DEV_COMPONENT_UPPER")
-
-	SET(CPACK_COMPONENT_ELT-BIN_DISPLAY_NAME                       "tools")
-	SET(CPACK_COMPONENT_ELT-BIN_DEPENDS                            "${LIBELT_COMPONENT}" )
-	SET(CPACK_COMPONENT_${LIBELT_COMPONENT_UPPER}_DISPLAY_NAME     "libraries")
-	SET(CPACK_COMPONENT_${LIBELT-DEV_COMPONENT_UPPER}_DISPLAY_NAME "common headers and installs")
-	SET(CPACK_COMPONENT_${LIBELT-DEV_COMPONENT_UPPER}_DEPENDS      "${LIBELT_COMPONENT}" )
-	SET(CPACK_COMPONENT_ELT-DEV_DISPLAY_NAME                       "${CPACK_COMPONENT_${LIBELT-DEV_COMPONENT}_DISPLAY_NAME}" )
-	SET(CPACK_COMPONENT_ELT-DEV_DEPENDS                            "${LIBELT-DEV_COMPONENT}" )
-
-
-
-	#	windows installer.	
-	SET(CPACK_NSIS_DISPLAY_NAME "elt")
-
-
-
-	#debian
-	SET(CPACK_DEBIAN_BUILD_DEPENDS debhelper cmake pkg-config)
-	SET(CPACK_DEBIAN_PACKAGE_PRIORITY extra)
-	SET(CPACK_DEBIAN_PACKAGE_SECTION "libs")
-	SET(CPACK_DEBIAN_CMAKE_OPTIONS "")
-	SET(CPACK_DEBIAN_PACKAGE_DEPENDS "mesa-common-dev , libx11-dev , libx11-xcb-dev , libegl1-mesa-dev , libxrandr-dev , libgles2-mesa-dev , libopenal-dev , libxi-dev, libudev-dev, libglu1-mesa-dev,
- 	libasound2-dev, libc6 (>= 2.1), opencl-headers, ${CPACK_COMPONENTS_ALL}")
-
-
-	SET(CPACK_DEBIAN_PACKAGE_SUGGESTS "" )
-	SET(CPACK_DEBIAN_PACKAGE_NAME "elt")
-	SET(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
-	#SET(CPACK_DEBIAN_PACKAGE_FILE_NAME "elt-${ELT_VERSION_MAJOR}.${ELT_VERSION_MINOR}${ELT_VERSION_REVISION}")
-	SET(CPACK_DEBIAN_PACKAGE_SOURCE_FILES ${_srcFiles} )
-	SET(CPACK_DEBIAN_PACKAGE_REMOVE_SOURCE_FILES build CMakeFiles _CPack_Packages) #samplers docs
-	SET(CPACK_DEBIAN_PACKAGE_SOURCE_COPY svn export --force)
-	SET(CPACK_DEBIAN_CHANGELOG "" )
-	SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Valdemar Lindberg") #required
-
-	SET(CPACK_DEBIAN_DISTRIBUTION_NAME "")
-	
-	EXECUTE_PROCESS(COMMAND lsb_release -is
-	    OUTPUT_VARIABLE _lsb_distribution OUTPUT_STRIP_TRAILING_WHITESPACE
-	    RESULT_VARIABLE _lsb_release_failed)
-	SET(CPACK_DEBIAN_DISTRIBUTION_NAME ${_lsb_distribution} CACHE STRING "Name of the distrubiton")
-	STRING(TOLOWER CPACK_DEBIAN_DISTRIBUTION_NAME CPACK_DEBIAN_DISTRIBUTION_NAME)
-	IF( CPACK_DEBIAN_DISTRIBUTION_NAME STREQUAL "ubuntu" )
-		SET(CPACK_DEBIAN_DISTRIBUTION_RELEASES lucid maverick natty oneiric precise CACHE STRING "Release code-names of the distrubiton release")
-	ENDIF()
-
-
-
-	SET(CPACK_SOURCE_GENERATOR "TGZ")
-	SET(CPACK_SOURCE_PACKAGE_FILE_NAME
-  "${CMAKE_PROJECT_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
-	SET(CPACK_SOURCE_IGNORE_FILES "/build/;/.bzr/;~$;${CPACK_SOURCE_IGNORE_FILES}")
-
-
-
-	SET(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE OFF)
-	SET(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
-	INCLUDE(CPack)
- 	INCLUDE(DebSourcePPA)
-
-	SET(DPUT_HOST "" CACHE STRING "PPA repository to upload the debian source")
-	#INCLUDE(UploadPPA)
+IF( UNIX )	
+	SET( TARGETDIR "${PROJECT_NAME}-${VERSION}")
+	ADD_CUSTOM_TARGET(	distribution
+				COMMAND mkdir -p ${TARGETDIR}
+				COMMAND cp -r src include samples shader CMakeLists.txt LICENSE ${TARGETDIR}
+				COMMAND tar cf - ${TARGETDIR} | gzip -c > ${TARGETDIR}.tar.gz 
+				COMMAND rm -r ${TARGETDIR} )
 ENDIF()
-
-#	
-if(WIN32)
-	if (CMAKE_SIZEOF_VOID_P EQUAL 8)
-		set(BIN_DIR "${PROJECT_SOURCE_DIR}/bin64/")
-		set(LIB_DIR "${PROJECT_SOURCE_DIR}/lib64/")
-	elseif()
-		set(BIN_DIR "${PROJECT_SOURCE_DIR}/bin32/")
-		set(LIB_DIR "${PROJECT_SOURCE_DIR}/lib32/")
-	endif()
-	
-	add_custom_target(UpdateELTLibDebugSymbolsAndDLLs COMMENT "Copying ELT Libraries ..." VERBATIM)
-
-
-endif(WIN32)
-
-
-#
-IF(FALSE)
-	FIND_PACKAGE(JNI)
-	IF(JNI_FOUND)
-		message (STATUS "JNI_INCLUDE_DIRS=${JNI_INCLUDE_DIRS}")
-		message (STATUS "JNI_LIBRARIES=${JNI_LIBRARIES}")
-	ENDIF()
-ENDIF()
-
-
-#install(FILES "${CMAKE_CURRENT_BINARY_DIR}/elt-config
